--- a/publications.bib
+++ b/publications.bib
@@ -39,11 +39,13 @@
   url = {https://doi.org/10.1039/D2SC05810C},
 }
 
-% @article{Ren_2023_ml,
-%   keywords = {preprint},
-%   author={Ren, Emmanuel and Coudert, Fran{\c{c}}ois-Xavier},
-%   doi = {},
-%   journal = {ChemRxiv},
-%   title = {Gas Separation Selectivity Prediction Based on Finely Designed Descriptors},
-%   year = {2023},
-% }
+@article{Ren_2023_ml,
+  keywords = {preprint},
+	doi = {10.26434/chemrxiv-2023-q841f},
+	url = {https://doi.org/10.26434%2Fchemrxiv-2023-q841f},
+	year = 2023,
+	month = {jun},
+	publisher = {ChemRxiv},
+	author = {Emmanuel Ren and Fran{\c{c}}ois-Xavier Coudert},
+	title = {Gas Separation Selectivity Prediction Based on Finely Designed Descriptors}
+}
