--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -124,28 +124,27 @@ I think that the missing effect that could explain the discrepancies observed is
 \centering
 \setlength\extrarowheight{2pt}
 \small
-\begin{tabular}{|l|r|c|c|c|c|}
+\begin{tabular}{|l|r|c|c|c|c|c|}
   \hline
-  Experimental structure & Adsorbate in &  Selectivity &  LCD (\SI{}{\angstrom}) &  PLD (\SI{}{\angstrom}) &  Xe Diff. \\
-  CCSD ref. code & the structure &  $s\ex{Xe/Kr}_0$ &   &   & Coeff. \si{\square\cm\per\s} \\
+  Experimental structure & Adsorbate in &  Selectivity & $K\e{H}\ex{Xe}$ &  LCD  &  PLD  &  Xe Diff. \\
+  CCSD ref. code & the structure &  $s\ex{Xe/Kr}_0$ &  (\si{\mmol\per\g\per\pascal}) &  (\si{\angstrom}) &  (\si{\angstrom}) & Coeff. \si{\square\cm\per\s} \\
   \hline
-  KAXQOR01\autocite{Yeh2012} & Not specified & 101 & 4.99 & 3.66 & 3$\times$10\ex{-09} \\
-  KAXQOR\autocite{Banerjee2012} & Not specified & 22 & 4.51 & 4.04 & 7$\times$10\ex{-06}  \\
-  KAXQIL\autocite{Banerjee2012} & H$_2$O & 104 & 5.12 & 3.77 & 3$\times$10\ex{-08} \\
-  QUXRIM\autocite{Banerjee2016hydro} & hexane &  52 & 4.75 & 4.31 & 3$\times$10\ex{-05}  \\
-  QUXRUY\autocite{Banerjee2016hydro} & hexane &  96 & 4.91 & 3.57 & 9$\times$10\ex{-10} \\
-  QUXROS\autocite{Banerjee2016hydro} & hexane &  99 & 5.00 & 3.66 & 5$\times$10\ex{-09}  \\
-  QUXREI\autocite{Banerjee2016hydro} & hexane & 101 & 5.02 & 3.67 & 7$\times$10\ex{-09}  \\
-  QUXRAE\autocite{Banerjee2016hydro} & hexane & 100 & 5.03 & 3.68 & 7$\times$10\ex{-09}  \\
-  QUXQUX\autocite{Banerjee2016hydro} & butane & 103 & 5.17 & 3.83 & 1$\times$10\ex{-07}   \\
-  QUWYEO\autocite{Banerjee2016hydro} & butane & 100 & 4.99 & 3.65 & 5$\times$10\ex{-09} \\
+  KAXQOR01\autocite{Yeh2012} & Not specified & 101 & 3$\times$10\ex{-2} &  4.99 & 3.66 & 3$\times$10\ex{-09} \\
+  KAXQOR\autocite{Banerjee2012} & Not specified & 22 & 4$\times$10\ex{-3} & 4.51 & 4.04 & 7$\times$10\ex{-06}  \\
+  KAXQIL\autocite{Banerjee2012} & H$_2$O & 104 & 3$\times$10\ex{-2} & 5.12 & 3.77 & 3$\times$10\ex{-08} \\
+  QUXRIM\autocite{Banerjee2016hydro} & hexane &  52 & 1$\times$10\ex{-2} & 4.75 & 4.31 & 3$\times$10\ex{-05}  \\
+  QUXRUY\autocite{Banerjee2016hydro} & hexane &  96 & 3$\times$10\ex{-2} & 4.91 & 3.57 & 9$\times$10\ex{-10} \\
+  QUXROS\autocite{Banerjee2016hydro} & hexane &  99 & 3$\times$10\ex{-2} & 5.00 & 3.66 & 5$\times$10\ex{-09}  \\
+  QUXREI\autocite{Banerjee2016hydro} & hexane & 101 & 3$\times$10\ex{-2} & 5.02 & 3.67 & 7$\times$10\ex{-09}  \\
+  QUXRAE\autocite{Banerjee2016hydro} & hexane & 100 & 3$\times$10\ex{-2} & 5.03 & 3.68 & 7$\times$10\ex{-09}  \\
+  QUXQUX\autocite{Banerjee2016hydro} & butane & 103 & 3$\times$10\ex{-2} & 5.17 & 3.83 & 1$\times$10\ex{-07}   \\
+  QUWYEO\autocite{Banerjee2016hydro} & butane & 100 & 3$\times$10\ex{-2} & 4.99 & 3.65 & 5$\times$10\ex{-09} \\
   \hline  
-  UQEFAZ\autocite{Banerjee_2016} & krypton & 23 & 4.53 & 4.08 & 5$\times$10\ex{-06}   \\
-  UQEFED\autocite{Banerjee_2016} & xenon & 63 & 4.89 & 3.54 & 1$\times$10\ex{-11}   \\
+  UQEFAZ\autocite{Banerjee_2016} & krypton & 23 & 5$\times$10\ex{-3} & 4.53 & 4.08 & 5$\times$10\ex{-06}   \\
+  UQEFED\autocite{Banerjee_2016} & xenon & 63 & 3$\times$10\ex{-2} & 4.89 & 3.54 & 1$\times$10\ex{-11}   \\
   \hline
   \end{tabular}
-  \caption{ \todo{add Henry} Structural, adsorption and transport properties of structures in the CSD database that are similar to SBMOF-1\autocite{Banerjee_2016}. The last structures actually correspond to the structures resolved in the paper presenting SBMOF-1 in Nature Communications. We can note the structural diversity that induces this diversity of properties. (The pore sizes are calculated using the CCDC radii definition.) }
-  \label{table:sbmof}
+  \caption{ Structural, adsorption and transport properties of structures in the CSD database that are similar to SBMOF-1\autocite{Banerjee_2016}. The last structures actually correspond to the structures resolved in the paper presenting SBMOF-1 in Nature Communications. We can note the structural diversity that induces this diversity of properties. (The pore sizes are calculated using the CCDC radii definition.) }\label{table:sbmof}
 \end{table}
 
 As shown on Figure~\ref{fgr:ads_config}, the orientation of the hexane molecule inside the material seems to favor either a configuration with a large LCD and a low PLD (QUXRUY), or a slightly lower LCD with a slightly higher PLD (QUXRIM). The material configurations are, however, a bit different from the ones observed with KXQOR or KAXQIL. 
@@ -200,7 +199,7 @@ For this reason, it is necessary to develop a polarizable forcefield that includ
 \begin{figure}[ht]
   \centering
   \includegraphics[width=0.7\textwidth]{figures/6-perspectives/exp_theory_discrepancies.pdf}
-  \caption{ Comparison between the selectivity values obtained experimentally and computationally. The structures are split in three categories depending on the difference between experiments and theory. We can explain the case of SBMOF-1 by its flexibility. The discrepancies for the materials in the lower right correspond to the ones introduced by Li et al. and Pei et al.,\autocite{Li_2019,Pei_2022} and the difference can be explained by the polarization that is not included in the level of theory considered. \todo{higher resolution+change xaxis (IAST)} }\label{fgr:exp_theory_discrepancy}
+  \caption{ Comparison between the selectivity values obtained experimentally and computationally. The structures are split in three categories depending on the difference between experiments and theory. We can explain the case of SBMOF-1 by its flexibility. The discrepancies for the materials in the lower right correspond to the ones introduced by Li et al.\ and Pei et al.,\autocite{Li_2019,Pei_2022} and the difference can be explained by the polarization that is not included in the level of theory considered. \todo{higher resolution+change xaxis (IAST)} }\label{fgr:exp_theory_discrepancy}
 \end{figure}
 
 If we consider the selectivity of good materials for xenon/krypton separation that are often presented in the literature, the materials named \ce{Co3(HCOO)6},\autocite{Wang_2014} CC3,\autocite{Chen_2014} SBMOF-2,\autocite{Chen_2015} CROFOUR-1-Ni,\autocite{Mohamed_2016}  SBMOF-1,\autocite{Banerjee_2016} \ce{Co3(C4O4)2(OH)2}\autocite{Li_2019} and ZJU-17a\autocite{Pei_2022} often appear as top separation materials.
@@ -282,7 +281,6 @@ Since a part of the induction energy is already contained in the Lennard-Jones p
 
 If we manage to customize this method to the xenon/krypton separation case, it could be possible to carry out screenings that find materials comparable to ZJU-74a-Pd. To further optimize the process, we can reduce the number of materials by restricting the screening process to a certain pore size and that contains open metal sites within a database, and then evaluate this restricted list using higher-level methods. 
 
-\todo{Estimate the induction energy for ZJU and squarate}
 
 \OnlyInSubfile{\printglobalbibliography}
 
