--- a/9-conclusion.tex
+++ b/9-conclusion.tex
@@ -3,9 +3,9 @@
 
 \chapter*{General conclusions}
 
-In this thesis, I studied nanoporous materials for xenon/krypton separation for their many applications in the industry. \todo{Give the } 
-I explored different techniques to estimate the 
+In this thesis, I explored different approaches to find the best nanoporous materials for adsorption-based industrial xenon/krypton separation (e.g., pressure-swing adsorption). As highlighted in our literature review, a high-throughput screening focus on one specific property of the nanoporous material in order to find the best material for a targeted application. There are three main challenges for screenings: (i) the accuracy of the methods used to characterize the key properties at play, (ii) the experimental/computation time required to determine those properties, and (iii) the 
 
+ 
 \begin{center}
     \pgfornament[width=6cm,color=CTsemi]{88}
 \end{center}
